Fix box behind creation fields before you've uploaded an image

--- a/styles/pinterest/catppuccin.user.css
+++ b/styles/pinterest/catppuccin.user.css
@@ -677,7 +677,7 @@
 
     /* Create */
 
-    div[style="background-color: rgba(255, 255, 255, 0.8); margin: 24px 0px 0px; z-index: 1;"] {
+    div[style*="background-color: rgba(255, 255, 255, 0.8); margin: 24px 0px 0px; z-index:"] {
       background-color: fadeout(@base, 20%) !important;
     }
 
